src/objects/KS_Condicion_de_Obra__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Recoge las condiciones de obra surgidas de cada oferta</description>
    <fields>
        <fullName>KS_Aprobado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aprobado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Cliente_final__c</fullName>
        <label>Dto. Cliente final</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Instalador__c</fullName>
        <label>Dto. Instalador</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_adicional_1__c</fullName>
        <label>Campaña</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_adicional_2__c</fullName>
        <label>Extra</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_base_1__c</fullName>
        <label>Base</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_base_2__c</fullName>
        <label>Ficha</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_equivalente_Distribuidor__c</fullName>
        <formula>100*(1-((1- KS_Dto_base_1__c )*(1- KS_Dto_base_2__c )*(1- KS_Dto_adicional_1__c )*(1- KS_Dto_adicional_2__c )*(1-KS_MSC_Distribuidor__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dto. equivalente Distribuidor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Estado_de_aprobacion__c</fullName>
        <formula>IF( KS_Aprobado__c = TRUE, IMAGE(&quot;/resource/1468564158000/flag_green_png&quot;,&quot;OK&quot;,16,16), IMAGE(&quot;/resource/1468564136000/flag_red_png&quot;,&quot;KO&quot;,16,16) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estado de aprobación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Familia__c</fullName>
        <label>Familia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Familia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_MSC_Cliente_final__c</fullName>
        <label>MSC Cliente final</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_MSC_Distribuidor__c</fullName>
        <label>MSC Distribuidor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_MSC_Instalador__c</fullName>
        <label>MSC Instalador</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_MSC__c</fullName>
        <formula>/**
IF(KS_MSC_Distribuidor__c &amp;&amp; KS_MSC_Instalador__c &amp;&amp; KS_MSC_Cliente_final__c, &apos;Distribuidor, Instalador, Cliente final&apos;
,
IF(KS_MSC_Distribuidor__c &amp;&amp; KS_MSC_Instalador__c, &apos;Distribuidor, Instalador&apos;
, 
IF(KS_MSC_Distribuidor__c &amp;&amp; KS_MSC_Cliente_final__c, &apos;Distribuidor, Cliente final&apos;
,
IF(KS_MSC_Distribuidor__c, &apos;Distribuidor&apos;, IF(KS_MSC_Instalador__c, &apos;Instalador&apos;, IF(KS_MSC_Cliente_final__c, &apos;Cliente final&apos;, &apos;&apos;)))
)
)
)
**/
&quot;TRUE&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nivel2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nivel2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Nivel3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nivel3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Nivel4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nivel4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Nivel_de_aprobacion_de_4__c</fullName>
        <formula>1 
+ 
IF(KS_Nivel2__c = TRUE, 1, 0) 
+ 
IF(KS_Nivel3__c = TRUE, 1, 0) 
+ 
IF(KS_Nivel4__c = TRUE,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nivel de aprobación (de 4)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <formula>CASESAFEID(KS_Oportunidad__r.KS_Obra__c)</formula>
        <label>Obra (ID)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Oportunidad__c</fullName>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Condiciones de Obra</relationshipLabel>
        <relationshipName>Condiciones_de_Obra</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KS_Organizacion_Ventas__c</fullName>
        <formula>KS_Oportunidad__r.KS_Organizacion_de_ventas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organización de ventas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Conectividad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Conectividad</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Condiciones_de_Obra</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Iluminacion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Iluminación</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Condiciones_de_Obra1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Jefe_de_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp. Jefe de Area</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Condiciones_de_Obra2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Negocio_Iberia_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Negocio Iberia 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Condiciones_de_Obra8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Negocio_Iberia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Negocio Iberia</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Condiciones_de_Obra3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Resto_de_gamas__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Resto de gamas</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Condiciones_de_Obra4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Sist_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Sist.Control</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Condiciones_de_Obra5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Vehiculo_Electrico__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Vehículo Eléctrico</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Condiciones_de_Obra6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Serie__c</fullName>
        <label>Serie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>033</fullName>
                </value>
                <value>
                    <fullName>034</fullName>
                </value>
                <value>
                    <fullName>035</fullName>
                </value>
                <value>
                    <fullName>036</fullName>
                </value>
                <value>
                    <fullName>038</fullName>
                </value>
                <value>
                    <fullName>045</fullName>
                </value>
                <value>
                    <fullName>049</fullName>
                </value>
                <value>
                    <fullName>051</fullName>
                </value>
                <value>
                    <fullName>052</fullName>
                </value>
                <value>
                    <fullName>053</fullName>
                </value>
                <value>
                    <fullName>054</fullName>
                </value>
                <value>
                    <fullName>056</fullName>
                </value>
                <value>
                    <fullName>075</fullName>
                </value>
                <value>
                    <fullName>077</fullName>
                </value>
                <value>
                    <fullName>108</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>128</fullName>
                </value>
                <value>
                    <fullName>129</fullName>
                </value>
                <value>
                    <fullName>131</fullName>
                </value>
                <value>
                    <fullName>134</fullName>
                </value>
                <value>
                    <fullName>135</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Submitted_for_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted for approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Subserie__c</fullName>
        <label>Subserie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Subserie</valueSetName>
        </valueSet>
    </fields>
    <label>Condicion de Obra</label>
    <nameField>
        <displayFormat>IdCO-{0000000}</displayFormat>
        <label>id condicion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condiciones de Obra</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>